# qfm

./: .gitignore  .gitmodules  CMakeLists.txt  build-mingw.bat  build-msvc.bat  build-new.sh  build.sh  qt4-build.sh  qt5-build.sh  useful
cmake/: FindKDE4Core.cmake  (+13 more)
qfm/: CMakeLists.txt  build-mingw.bat  build.sh
qfm/src/: CMakeLists.txt  application.cpp  application.h  main.cpp
qfm/src/filesysteminfo/: filesysteminfo.cpp
qfm/src/mainwindow/: mainwindow.cpp  xmlstreamreader.h
qfm/src/mainwindow/foldersview/: directoryview.cpp  directoryview.h  foldersview.cpp  foldersview.h
qfm/src/mainwindow/foldersview/contextmenu/: contextmenu.cpp
qfm/src/mainwindow/foldersview/filesystemmodel/: filesystemchangeslist.h  filesystemdecorationdelegate.h  filesysteminfo.cpp  filesysteminfo.h  filesystemmodel.cpp  filesystemmodel.h  filesystemmodeladaptor.h  filesystemproxymodel.cpp  filesystemproxymodel.h
qfm/src/mainwindow/foldersview/widgets/: directorylistview.cpp  directorylistview.h  pathedit.cpp  tasksview.cpp  tasksview.h
qfm/src/services/: services.cpp  services.h
qfm/src/settings/: applicationsettings.cpp
qfm/src/settings/configoptions/: colorconfigoption.h  emailconfigoption.h
qfm/src/shell/: shellline.cpp
qfm/src/tools/: metatemplates.h
qfm/src/tools/events/imp/: eventhandlerbase.h  eventsourcebase.h  focuseventhandler.h  focuseventsource.h  keyboardeventhandler.h  keyboardeventsource.h  mouseeventhandler.h
qfm/src/tools/exceptionshandler/: exceptionshandler.cpp  exceptionshandler.h
qfm/src/tools/flatentitymodel/: flatentitymodel.cpp
qfm/src/tools/flatentitymodel/items/: entityitem.h
qfm/src/tools/memory/: memory_manager.cpp  memory_manager.h
qfm/src/tools/natsort/: qnatsort.cpp
qfm/src/tools/settings/: settings.cpp  settings.h
qfm/src/tools/settings/configoptions/: configoption.h  configoptiongroup.h  configoptionvalue.h  configoptionvaluedefault.h  configoptionvaluetemplate.h
qfm/src/tools/settings/constraints/: configoptionconstraintempty.cpp  configoptionconstraintlessthan.cpp  configoptionconstraintrange.cpp
qfm/src/tools/settings/dialog/: settingsdialog.cpp
qfm/src/tools/taskspool/: ns_taskspool.h  taskpool.cpp  taskpool.h  taskthread.h
qfm/src/tools/widgets/stringdialog/: stringdialog.h
workspace/: CMakeLists.txt  build.sh  root
workspace/qfm/: CMakeLists.txt  build-eclipse.bat  build-msvc.bat
workspace/qfm/cmake/: FindQtSingleInstance.cmake  FindSqlite.cmake  Install.cmake  collect_files.cmake  collect_sources.cmake  compiler_flags.cmake  doxygen.cmake  platform.cmake  platform_options_unix.cmake  version.cmake
workspace/qfm/doc/: mainpage.h
workspace/qfm/resources/: winapp.rc
workspace/qfm/src/: CMakeLists.txt  application.cpp  application.h  main.cpp  version.h
workspace/qfm/src/desktop/: desktop_ns.h
workspace/qfm/src/desktop/contextmenu/: desktop_contextmenu.h
workspace/qfm/src/desktop/devices/: desktop_device.h  desktop_devices.h
workspace/qfm/src/desktop/theme/: desktop_theme.h
workspace/qfm/src/history/: historyentry.h  navigationhistory.h
workspace/qfm/src/mainwindow/: mainwindow.cpp  mainwindow.h  tabwidget.cpp  tabwidget.h
workspace/qfm/src/mainwindow/foldersview/: directoryview.cpp  directoryview.h  foldersview.cpp
workspace/qfm/src/mainwindow/view/: dolphinitemlistcontainer.cpp  dolphinitemlistcontainer.h
workspace/qfm/src/memory/: memorymanager.h
workspace/qfm/src/memory/tags/: global_memory_tag.h  loki_memory_tag.h  malloc_memory_tag.h  qt_memory_tag.h
workspace/qfm/src/services/: services.cpp
workspace/qfm/src/settings/: applicationsettings.cpp  applicationsettingscontainer.cpp
workspace/qfm/src/settings/configoptions/: checkconfigoption.cpp  emailconfigoption.cpp
workspace/qfm/src/settings/dialog/: applicationsettingsdialogsettings.cpp
workspace/qfm/src/settings/options/: applicationsettingsoptionfont.cpp
workspace/qfm/src/settings/pages/: applicationsettingsgeneralpage.h  applicationsettingshelppage.cpp  applicationsettingshelppage.h  applicationsettingspluginspage.h
workspace/qfm/src/shell/: qexlineedit.h  qexlineedit_p.h  shellline.h
workspace/qfm/src/tasksview/: chasewidget.cpp  taskslistmodel.cpp  taskview.cpp
workspace/qfm/src/tools/: tools_ns.h
workspace/qfm/src/tools/arguments/: argtype.h  define.h  undefine.h
workspace/qfm/src/tools/common/: disable_create_on_heap.h
workspace/qfm/src/tools/containers/: avltree.h  containers_ns.h  hashedlist.h  orderedmap.h  stdavltree.h
workspace/qfm/src/tools/events/: events_ns.h
workspace/qfm/src/tools/flatentitymodel/: flatentitymodel.h
workspace/qfm/src/tools/log/: servicefilelog.cpp
workspace/qfm/src/tools/memory/: memory_holder.h  memory_scopedpointer.h
workspace/qfm/src/tools/models/: models_ns.h
workspace/qfm/src/tools/pbytearray/: pbytearray.h  pbytearray_imp.h  pbytearray_p.cpp
workspace/qfm/src/tools/platform/: platform_compiler.h
workspace/qfm/src/tools/pstrings/: pstring.h
workspace/qfm/src/tools/settings/: settings.cpp  settings.h  settingscontainer.cpp  settingscontainer.h
workspace/qfm/src/tools/strings/: strnatcmp.cpp  strnatcmp.h
workspace/qfm/src/tools/taskspool/: questioner.h  taskpool.h  taskthread.cpp  tryier.h
workspace/qfm/src/tools/templates/: templates_ns.h  templates_statemachine.h
workspace/qfm/src/tools/threads/: threads_condition.h  threads_locallocker.h  threads_thread.cpp  threads_thread.h
workspace/qfm/src/vfs/: vfs_node.cpp  vfs_ns.h
workspace/qfm/src/vfs-plugins/arcplugin/: arc_ns.h  arc_plugin.h
workspace/qfm/src/vfs-plugins/default/: default_ns.h  default_plugin.h
workspace/qfm/src/vfs-plugins/idmplugin/: idm_ns.h  idm_plugin.cpp  idm_plugin.h  idm_strings.h
workspace/qfm/src/vfs-plugins/m3uplugin/: m3udelegate.h  m3unode.cpp  m3uplugin_ns.h
workspace/qfm/src/vfs/actions/: vfs_actions.cpp
workspace/qfm/src/vfs/containers/: vfs_snapshot.cpp
workspace/tmp/storage/: idm_storage.h
workspace/tmp/storage/queries/: idm_selectquery.h
workspace/tmp/storage/structure/: idm_entitiestable.h
workspace/tmp/storage/values/: idm_valuereader.h
(+2544 files in other folders)
